# mav_sensors

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cfg.sh  package.xml
.github/workflows/: ubuntu20_04.yml
cfg/radar/: xwr18xx_AOP_profile_best_velocity_resolution.cfg
include/mav_sensors/core/: driver.h  sensor.h  sensor_config.h
include/mav_sensors/core/protocols/: Gpio.h  Serial.h  Spi.h
include/mav_sensors/core/protocols/common/: PosixFilesystem.h
include/mav_sensors/core/sensor_types/: CfarDetections.h  FluidPressure.h  Radar.h  Temperature.h
include/mav_sensors/impl/barometer/: XWR18XX_mmw_demo.h  bmp390.h  bmp390_spi_ids.h
include/mav_sensors/impl/radar/: XWR18XX_mmw_demo.h  xwr18xx_mmw_demo.h
mav_sensors_core/: CMakeLists.txt  package.xml
mav_sensors_core/include/mav_sensors_core/: driver.h  sensor.h  sensor_config.h
mav_sensors_core/include/mav_sensors_core/common/: constants.h  vec.h
mav_sensors_core/include/mav_sensors_core/protocols/: Gpio.h  Serial.h  Spi.h
mav_sensors_core/include/mav_sensors_core/protocols/common/: PosixFilesystem.h
mav_sensors_core/src/: driver.cpp  main.cpp  sensor.cpp  sensor_config.cpp
mav_sensors_core/src/core/: driver.cpp  sensor_config.cpp
mav_sensors_core/src/core/protocols/common/: PosixFilesystem.cpp
mav_sensors_core/src/impl/barometer/: bmp390.cpp
mav_sensors_core/src/nodes/: xwr18xx_mmw_demo_node.cpp
mav_sensors_core/src/protocols/: Gpio.cpp  Serial.cpp  Spi.cpp
mav_sensors_core/src/protocols/common/: PosixFilesystem.cpp
mav_sensors_core/src/sensor_types/: FluidPressure.cpp
mav_sensors_demo/: CMakeLists.txt  package.xml
mav_sensors_demo/cfg/radar/: increase_max_velocity.cfg  profile_more_sensitive.cfg  xwr18xx_AOP_profile_best_range_resolution_heatmap.cfg
mav_sensors_demo/launch/: publish_radar.launch
mav_sensors_demo/src/: bmi088_demo.cpp  bmp390_demo.cpp  xwr18xx_mmw_data_publisher.cpp  xwr18xx_mmw_demo_node.cpp
mav_sensors_drivers/: CMakeLists.txt  package.xml
mav_sensors_drivers/docs/: Sensors.md
mav_sensors_drivers/include/mav_sensors_drivers/barometer/: bmp390.h
mav_sensors_drivers/include/mav_sensors_drivers/imu/: adis16448.h  adis16448_cmds.h  bmi088.h
mav_sensors_drivers/include/mav_sensors_drivers/radar/: xwr18xx_mmw_demo.h
mav_sensors_drivers/include/mav_sensors_drivers/sensor_types/: Accelerometer.h  FluidPressure.h  Gyroscope.h  Magnetometer.h  Radar.h  Temperature.h  Time.h
mav_sensors_drivers/src/barometer/: bmp390.cpp
mav_sensors_drivers/src/imu/: adis16448.cpp  bmi088.cpp
mav_sensors_drivers/src/radar/: xwr18xx_mmw_demo.cpp
src/: main.cpp
src/core/: driver.cpp  sensor.cpp
src/core/protocols/: Gpio.cpp  Serial.cpp  Spi.cpp
src/core/protocols/common/: PosixFilesystem.cpp
src/core/sensor_types/: FluidPressure.cpp
src/impl/radar/: XWR18XX_mmw_demo.cpp  xwr18xx_mmw_demo.cpp
src/nodes/: xwr18xx_mmw_demo_node.cpp
