<?xml version="1.0"?>
<package format="2">
  <name>mav_sensors</name>
  <version>0.0.0</version>
  <description>The mav_sensors package</description>
  <maintainer email="acey@todo.todo">acey</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>lpp</depend>
  <depend>mav_imu</depend>
  <export>
  </export>
</package>
