<?xml version="1.0"?>
<package format="2">
  <name>mav_sensors_drivers</name>
  <version>0.0.0</version>
  <description>The mav_sensors_drivers package</description>
  <maintainer email="acey@todo.todo">acey</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>lpp</depend>
  <depend>mav_sensors_core</depend>
</package>
